--- a/javascriptParticalSystem.html
+++ b/javascriptParticalSystem.html
@@ -6,15 +6,50 @@
     <meta charset="UTF-8">
     <title>Javascript Particles</title>
     <style>
+        body {
+            background: black;
+        }
+
         #container {
             width: 40em;
             height: 40em;
-            border: 5px solid forestgreen;
-            background: blanchedalmond;
+            display: inline-block;
+            border: 1px solid rgb(0, 70, 20);
+            background-image: url("http://virm.net/img/Fashionable-Diagonal-Pattern-Wood-Floor-Designs-With.jpg");
+            background-size: 100%;
         }
 
         #canvas {
             margin: 1em;
+            background: black;
+        }
+
+        #sliders {
+            width: 40em;
+            height: 40em;
+            display: inline-block;
+            vertical-align: top;
+            border: 1px solid rgb(0, 70, 20);
+            background-image: url("http://virm.net/img/Fashionable-Diagonal-Pattern-Wood-Floor-Designs-With.jpg");
+            background-size: 100%;
+        }
+
+        #sliders .pair {
+            margin: 1em;
+            padding: 1em;
+            display: block;
+            background-color: rgba(0, 0, 0, 0.8);
+            color: white;
+        }
+
+        #sliders input,
+        #sliders label {
+            width: calc(33% - 1em);
+            margin: 0;
+            padding: 0;
+            display: inline-block;
+            vertical-align: middle;
+            text-align: center;
         }
     </style>
 </head>
@@ -23,6 +58,33 @@
     <div id="container">
         <canvas id="canvas"></canvas>
     </div>
+    <div id="sliders">
+        <div class="pair">
+            <label>Emission Rate</label>
+            <input id="emissionRateSlider" type="range" min="1" max="50" value="0">
+            <label id="emissionRateLabel">0</label>
+        </div>
+        <div class="pair">
+            <label>Particle Size</label>
+            <input id="particleSizeSlider" type="range" min="1" max="50" value="0">
+            <label id="particleSizeLabel">0</label>
+        </div>
+        <div class="pair">
+            <label>Spread</label>
+            <input id="spreadSlider" type="range" min="0" max="360" value="0">
+            <label id="spreadLabel">0</label>
+        </div>
+        <div class="pair">
+            <label>Angle</label>
+            <input id="angleSlider" type="range" min="0" max="360" value="0">
+            <label id="angleLabel">0</label>
+        </div>
+        <div class="pair">
+            <label>Speed</label>
+            <input id="speedSlider" type="range" min="1" max="10" value="0">
+            <label id="speedLabel">0</label>
+        </div>
+    </div>
 
     <script>
         //============================================
@@ -30,17 +92,75 @@
         //============================================
         var container = document.getElementById("container"),
             canvas = document.getElementById("canvas"),
-            gc = canvas.getContext("2d"),
-            CANVAS_COLOR = "rgba(0, 0, 0, 1)",
-            particles = [],
-            EMITTER_A;
+            emissionRateSlider = document.getElementById("emissionRateSlider"),
+            emissionRateLabel = document.getElementById("emissionRateLabel"),
+            particleSizeSlider = document.getElementById("particleSizeSlider"),
+            particleSizeLabel = document.getElementById("particleSizeLabel"),
+            angleSlider = document.getElementById("angleSlider"),
+            angleLabel = document.getElementById("angleLabel"),
+            spreadSlider = document.getElementById("spreadSlider"),
+            spreadLabel = document.getElementById("spreadLabel"),
+            speedSlider = document.getElementById("speedSlider"),
+            speedLabel = document.getElementById("speedLabel");
 
-        var FPS = 1000 / 60,
-            MAX_PARTICLES = 20000,
+        var gc = canvas.getContext("2d"),
+            particles = [],
+            EMITTER_A,
+            FPS = 1000 / 60,
+            MAX_PARTICLES = 50000,
             EMISSION_RATE = 10,
             PARTICLE_SIZE = 4,
-            randDegrees = 0,
-            randLife = 0;
+            SPREAD = 0.20,
+            ANGLE = Math.PI * 0.25,
+            SPEED = 2;
+
+        //============================================
+        //  Event-Listeners
+        //============================================
+        function addEventLisnters() {
+            emissionRateSlider.value = EMISSION_RATE;
+            emissionRateLabel.innerHTML = EMISSION_RATE;
+
+            emissionRateSlider.addEventListener("input", function () {
+                emissionRateLabel.innerHTML = emissionRateSlider.value;
+                EMISSION_RATE = emissionRateSlider.value;
+            });
+
+            particleSizeSlider.value = PARTICLE_SIZE;
+            particleSizeLabel.innerHTML = PARTICLE_SIZE;
+
+            particleSizeSlider.addEventListener("input", function () {
+                particleSizeLabel.innerHTML = particleSizeSlider.value;
+                PARTICLE_SIZE = particleSizeSlider.value;
+            });
+
+            spreadSlider.value = (SPREAD * 100);
+            spreadLabel.innerHTML = (SPREAD * 100);
+
+            spreadSlider.addEventListener("input", function () {
+                spreadLabel.innerHTML = spreadSlider.value;
+                SPREAD = spreadSlider.value * 0.01;
+                EMITTER_A.spread = (SPREAD);
+            });
+
+            angleSlider.value = ((ANGLE / Math.PI) * 100) * 1.8;
+            angleLabel.innerHTML = ((ANGLE / Math.PI) * 100) * 1.8;
+
+            angleSlider.addEventListener("input", function () {
+                angleLabel.innerHTML = angleSlider.value;
+                ANGLE = Math.PI * ((angleSlider.value / 1.8) * 0.01);
+                EMITTER_A.velocity = new Vector.fromAngle(ANGLE, SPEED);
+            });
+
+            speedSlider.value = SPEED;
+            speedLabel.innerHTML = SPEED;
+
+            speedSlider.addEventListener("input", function () {
+                speedLabel.innerHTML = speedSlider.value;
+                SPEED = speedSlider.value;
+                EMITTER_A.velocity = new Vector.fromAngle(ANGLE, SPEED);
+            });
+        }
 
         //============================================
         //  Helpers
@@ -101,19 +221,12 @@
             create: function () {
                 this.canvas.width = container.clientWidth
                     - (container.offsetWidth - container.clientWidth)
-                    - parseInt(window.getComputedStyle(this.canvas).marginRight)
+                    - (parseInt(window.getComputedStyle(this.canvas).marginRight) * 2)
                     - parseInt(window.getComputedStyle(container).borderRightWidth);
                 this.canvas.height = container.clientHeight
                     - (container.offsetHeight - container.clientHeight)
-                    - parseInt(window.getComputedStyle(this.canvas).marginBottom)
+                    - (parseInt(window.getComputedStyle(this.canvas).marginBottom) * 2)
                     - parseInt(window.getComputedStyle(container).borderBottomWidth);
-                this.context = this.canvas.getContext("2d");
-            },
-            paint: function () {
-                gc.globalCompositeOperation = "source-over";
-                gc.fillStyle = CANVAS_COLOR;
-                gc.fillRect(0, 0, this.canvas.width, this.canvas.height);
-                gc.globalCompositeOperation = "lighter";
             }
         }
 
@@ -124,17 +237,22 @@
         }
 
         Particle.prototype.move = function () {
+            // this.acceleration.x = 0.05;
+            // this.acceleration.y = -0.05;
+
+            // if(this.position.y < CanvasArea.canvas.height / 2) {
+            //     this.acceleration.x = -0.05;
+            //     this.acceleration.y = 0.05;
+            // }
+
             this.velocity.add(this.acceleration);
             this.position.add(this.velocity);
-
-            this.position.x *= 1.005;
-            // this.position.y *= 1.005;
         }
 
         function Emitter(point, velocity, spread) {
             this.position = point;
             this.velocity = velocity;
-            this.spread = spread || Math.PI / 32; //possible angles = velocity +/- spread
+            this.spread = spread || Math.PI / 32; //possible angles = 0.00 - 3.65
             this.paintColor = "#999";
         }
 
@@ -143,7 +261,9 @@
             this.eMagnitude = this.velocity.getMagnitude();
             this.ePosition = new Vector(this.position.x, this.position.y);
             this.eVelocity = Vector.fromAngle(this.eAngle, this.eMagnitude);
-            // var acceleration = new Vector(2, 2);
+            // this.eVelocity.add(curve()); //Makes it so some move faster then others, adding a 3d effect
+            // var acceleration = new Vector(0, 0);
+
             return new Particle(this.ePosition, this.eVelocity, /*acceleration*/);
         }
 
@@ -168,9 +288,9 @@
                     continue;
                 }
 
-                if(particle.life <= 0) {
-                    continue;
-                }
+                // if (particle.life <= 0) {
+                //     continue;
+                // }
 
                 particle.move();
                 currentParticles.push(particle);
@@ -191,69 +311,38 @@
         //===========================================
         //  Main Functions
         //===========================================
-        function build() {
+        function buildCanvas() {
             CanvasArea.create();
-            EMITTER_A = new Emitter(new Vector(10, 10), Vector.fromAngle(1, 2));
+            EMITTER_A = new Emitter(new Vector(100, 100), Vector.fromAngle(ANGLE, SPEED), SPREAD);
         }
 
         function clear() {
             gc.clearRect(0, 0, CanvasArea.canvas.width, CanvasArea.canvas.height);
         }
 
-
-        // var spiralChange = 0.01;
-        // var change = 0.05;
-
-        // var spreadChange = 0.01;
-
         function update() {
-            // if (spiralChange >= 0.5) {
-            //     change += -0.05;
-            // }
-
-            // if (spiralChange <= 0) {
-            //     change += 0.05;
-            // }
-
-            // spiralChange += change;
-
-            // EMITTER_A.velocity = Vector.fromAngle(spiralChange, 3);
-
-            // if (EMITTER_A.spread >= 0.4) {
-            //     spreadChange = -0.01;
-            // }
-
-            // if (EMITTER_A.spread <= 0.2) {
-            //     spreadChange = 0.01;
-            // }
-
-            // EMITTER_A.spread += spreadChange;
-
             addNewParticles();
             plotParticles(CanvasArea.canvas.width, CanvasArea.canvas.height);
         }
 
         function paint() {
-            CanvasArea.paint();
+            gc.globalCompositeOperation = "lighter";
             drawParticles();
-        }
-
-        function queue() {
-            requestAnimFrame(mainLoop);
         }
 
         function mainLoop() {
             clear();
             update();
             paint();
-            queue();
+            requestAnimFrame(mainLoop);
         }
 
         //===========================================
         //  Run
         //===========================================
         window.onload = function () {
-            build();
+            buildCanvas();
+            addEventLisnters();
             mainLoop();
         }
     </script>
